Fix alignment issue

--- a/src/pages/MessagesPage.css
+++ b/src/pages/MessagesPage.css
@@ -3,20 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    
-}
-    
-body {
-    background-image: url("../img/white.jpg");
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    color: white;
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+
 }
 
-.container{
+.container {
     width: 90vw;
     height: 90vh;
     background-color: rgba(200, 219, 255, 0.5);
